# notification_common_event_service

./: AGENTS.md  CODEOWNERS  README_zh.md  bundle.json  event.gni  hisysevent.yaml  mgit.info
frameworks/core/: BUILD.gn  ICommonEvent.idl  IEventReceive.idl  cfi_blocklist.txt  libcesfwk_core.map
frameworks/core/include/: ces_inner_error_code.h  ces_xcollie.h  common_event.h  common_event_constant.h  common_event_death_recipient.h  common_event_listener.h  common_event_proxy.h  common_event_service_ipc_interface_code.h  common_event_stub.h  event_log_wrapper.h  event_receive_proxy.h  event_receive_stub.h  event_trace_wrapper.h  hitrace_meter_adapter.h  icommon_event.h  ievent_receive.h
frameworks/core/src/: ces_xcollie.cpp  common_event.cpp  common_event_death_recipient.cpp  common_event_listener.cpp  common_event_proxy.cpp  common_event_stub.cpp  event_receive_proxy.cpp  event_receive_stub.cpp
frameworks/core/test/unittest/: BUILD.gn  common_event_listener_test.cpp  common_event_proxy_test.cpp  common_event_stub_test.cpp  common_event_test.cpp  event_receive_stub_test.cpp  mock_message_parcel.h
frameworks/extension/: BUILD.gn  IStaticSubscriber.idl
frameworks/extension/include/: ani_common_event_utils.h  ani_event_errors_utils.h  ani_static_subscriber_extension.h  ani_static_subscriber_extension_context.h  js_static_subscriber_extension.h  js_static_subscriber_extension_context.h  static_subscriber_extension.h  static_subscriber_extension_context.h  static_subscriber_stub_impl.h
frameworks/extension/include/ani/: ani_common_event_utils.h  ani_event_errors_utils.h  ani_static_subscriber_extension.h  ani_static_subscriber_extension_context.h
frameworks/extension/include/ipc/: istatic_subscriber.h  static_subscriber_proxy.h  static_subscriber_stub.h
frameworks/extension/include/loader/: static_subscriber_extension_module_loader.h
frameworks/extension/src/: ani_static_subscriber_extension.cpp  ani_static_subscriber_extension_context.cpp  js_static_subscriber_extension.cpp  js_static_subscriber_extension_context.cpp  static_subscriber_extension.cpp  static_subscriber_extension_context.cpp  static_subscriber_stub_impl.cpp
frameworks/extension/src/ani/: ani_common_event_utils.cpp  ani_event_errors_utils.cpp  ani_static_subscriber_extension.cpp  (+1 more)
frameworks/extension/test/: BUILD.gn
interfaces/kits/cj/: BUILD.gn
services/: BUILD.gn  cfi_blocklist.txt  libcesfwk_services.map
services/ces/include/: ability_manager_death_recipient.h  ability_manager_helper.h  access_token_helper.h  bundle_manager_helper.h  common_event_control_manager.h  common_event_manager_service.h  common_event_record.h  common_event_sticky_manager.h  common_event_subscriber_manager.h  common_event_support_mapper.h  history_event_record.h  inner_common_event_manager.h  ordered_event_record.h  os_account_manager_helper.h  static_subscriber_connection.h  static_subscriber_manager.h
services/ces/src/: ability_manager_death_recipient.cpp  ability_manager_helper.cpp  access_token_helper.cpp  bms_death_recipient.cpp  bundle_manager_helper.cpp  common_event_control_manager.cpp  common_event_manager_service.cpp  common_event_permission_manager.cpp  common_event_sticky_manager.cpp  common_event_subscriber_manager.cpp  inner_common_event_manager.cpp  static_subscriber_connection.cpp  static_subscriber_manager.cpp
services/include/: ability_manager_helper.h  access_token_helper.h  bundle_manager_helper.h  common_event_control_manager.h  common_event_manager_service.h  common_event_manager_service_ability.h  common_event_permission_manager.h  common_event_record.h  common_event_sticky_manager.h  common_event_subscriber_manager.h  event_report.h  history_event_record.h  inner_common_event_manager.h  ordered_event_handler.h  ordered_event_record.h  os_account_manager_helper.h  publish_manager.h  remote_death_recipient.h  static_subscriber_connection.h  static_subscriber_data_manager.h  static_subscriber_manager.h  subscriber_death_recipient.h
services/resource/: static_subscriber_config.json
services/src/: ability_manager_death_recipient.cpp  ability_manager_helper.cpp  access_token_helper.cpp  bms_death_recipient.cpp  bundle_manager_helper.cpp  common_event_control_manager.cpp  common_event_manager_service.cpp  common_event_manager_service_ability.cpp  common_event_permission_manager.cpp  common_event_sticky_manager.cpp  common_event_subscriber_manager.cpp  common_event_support_mapper.cpp  event_report.cpp  inner_common_event_manager.cpp  ordered_event_handler.cpp  os_account_manager_helper.cpp  publish_manager.cpp  static_subscriber_connection.cpp  static_subscriber_data_manager.cpp  static_subscriber_manager.cpp  subscriber_death_recipient.cpp  system_time.cpp
services/test/moduletest/: BUILD.gn
services/test/unittest/: BUILD.gn  ability_manager_helper_test.cpp  bundle_manager_helper_other_test.cpp  bundle_manager_helper_test.cpp  common_event_access_token_helper_test.cpp  common_event_control_manager_test.cpp  common_event_dump_test.cpp  common_event_freeze_test.cpp  common_event_freeze_unit_test.cpp  common_event_hisysevent_test.cpp  common_event_manager_service_branch_test.cpp  common_event_manager_service_new_branch_test.cpp  common_event_manager_service_test.cpp  common_event_publish_manager_event_unit_test.cpp  common_event_publish_ordered_event_unit_test.cpp  common_event_publish_permission_event_unit_test.cpp  common_event_publish_system_event_test.cpp  common_event_sticky_test.cpp  common_event_subscribe_unit_test.cpp  common_event_subscriber_manager_test.cpp  common_event_unsubscribe_unit_test.cpp  inner_common_event_manager_test.cpp  mock_common_event_subscriber.cpp  ordered_event_handler_test.cpp  subscriber_deach_recipient_test.cpp
test/fuzztest/commoneventmanagerservice/: BUILD.gn
test/fuzztest/commoneventmanagerservice_fuzzer/: BUILD.gn  commoneventmanagerservice_fuzzer.cpp  commoneventmanagerservice_fuzzer.h
tools/cem/: BUILD.gn
tools/cem/include/: common_event_command.h  shell_command.h
tools/cem/src/: common_event_command.cpp  main.cpp  shell_command.cpp
(+321 files in other folders)
