# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/ces_standard/event.gni")
import("//build/ohos.gni")

cflags = []

config("ces_services_config") {
  visibility = [ ":*" ]

  include_dirs = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
    "EVENT_LOG_TAG = \"CesService\"",
    "LOG_DOMAIN = 0xD008800",
  ]
}

config("ces_services_public_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${ces_services_path}/include",
    "//base/account/os_account/interfaces/innerkits/osaccount/native/include",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/include",
    "//utils/system/safwk/native/include",
  ]
}

ohos_shared_library("cesfwk_services") {
  sources = [
    "${ces_services_path}/src/ability_manager_death_recipient.cpp",
    "${ces_services_path}/src/ability_manager_helper.cpp",
    "${ces_services_path}/src/bms_death_recipient.cpp",
    "${ces_services_path}/src/bundle_manager_helper.cpp",
    "${ces_services_path}/src/common_event_control_manager.cpp",
    "${ces_services_path}/src/common_event_manager_service.cpp",
    "${ces_services_path}/src/common_event_permission_manager.cpp",
    "${ces_services_path}/src/common_event_sticky_manager.cpp",
    "${ces_services_path}/src/common_event_subscriber_manager.cpp",
    "${ces_services_path}/src/common_event_support_mapper.cpp",
    "${ces_services_path}/src/inner_common_event_manager.cpp",
    "${ces_services_path}/src/ordered_event_handler.cpp",
    "${ces_services_path}/src/publish_manager.cpp",
    "${ces_services_path}/src/static_subscriber_connection.cpp",
    "${ces_services_path}/src/static_subscriber_manager.cpp",
    "${ces_services_path}/src/subscriber_death_recipient.cpp",
    "${ces_services_path}/src/system_time.cpp",
  ]

  configs = [ ":ces_services_config" ]

  public_configs = [ ":ces_services_public_config" ]

  deps = [
    ":static_subscriber_config.json",
    "${ces_common_path}:libevent_common",
    "${ces_core_path}:cesfwk_core",
    "${ces_native_path}:cesfwk_innerkits",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:static_subscriber_ipc",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
    "ability_runtime:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "appexecfwk_standard:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  subsystem_name = "notification"
  part_name = "ces_standard"
}

ohos_prebuilt_etc("static_subscriber_config.json") {
  source = "//base/notification/ces_standard/services/ces/resource/static_subscriber_config.json"
  subsystem_name = "notification"
  part_name = "ces_standard"
}
