# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/common_event_service/event.gni")
import("//build/ohos.gni")

ohos_shared_library("cj_common_event_manager_ffi") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "../napi/common_event/include",
    "../../../interfaces/inner_api",
  ]

  if (product_name != "ohos-sdk") {
    deps = [ "../../../frameworks/core:cesfwk_core" ]

    external_deps = [
      "ability_runtime:ability_manager",
      "ability_runtime:abilitykit_native",
      "ability_runtime:napi_base_context",
      "hilog:libhilog",
      "napi:cj_bind_ffi",
    ]

    sources = [
      "src/common_event.cpp",
      "src/common_event_manager_ffi.cpp",
      "src/common_event_manager_impl.cpp",
      "src/parameter_parse.cpp",
      "src/subscribe_info.cpp",
      "src/subscriber.cpp",
    ]
  } else {
    sources = [ "src/common_event_manager_mock.cpp" ]
  }

  relative_install_dir = "module"
  subsystem_name = "notification"
  part_name = "common_event_service"
}
