# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/common_event_service/event.gni")
import("//build/ohos.gni")

cflags = []

config("native_module_config") {
  visibility = [ ":*" ]

  include_dirs = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("cj_common_event_manager_ffi") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "../napi/common_event/include",
    "../../../interfaces/inner_api",
  ]

  configs = [ ":native_module_config" ]

  if (!build_ohos_sdk) {
    deps = [
      "../../../frameworks/core:cesfwk_core",
      "../../../frameworks/native:cesfwk_innerkits",
    ]

    external_deps = [
      "ability_base:base",
      "ability_base:want",
      "ability_runtime:ability_manager",
      "ability_runtime:abilitykit_native",
      "ability_runtime:napi_base_context",
      "c_utils:utils",
      "ffrt:libffrt",
      "hilog:libhilog",
      "napi:cj_bind_ffi",
      "napi:cj_bind_native",
    ]

    sources = [
      "src/common_event.cpp",
      "src/common_event_manager_ffi.cpp",
      "src/common_event_manager_impl.cpp",
      "src/parameter_parse.cpp",
      "src/subscribe_info.cpp",
      "src/subscriber.cpp",
    ]
  } else {
    sources = [ "src/common_event_manager_mock.cpp" ]
  }

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "notification"
  part_name = "common_event_service"
}
